@startuml
title Diagrama de Entidad-Relación - Jorgestor (Evolucionado)

class Examen {
  - id: Long
  - fecha: LocalDate
  - tipoEvaluacion: EvaluaciónExamen
  - esPersonalizado: Boolean
}

class Asignatura {
  - id: Long
  - título: String
  - código: String
  - cursoAcademico: String
  - cursoSugerido: Integer
}

class Pregunta {
  - id: Long
  - enunciado: String
  - dificultad: DificultadPregunta
}

class Grado {
  - id: Long
  - título: String
  - código: String
}

class Profesor {
  - id: Long
  - nombre: String
  - apellidos: String
  - DNI: String
  - email: String
}

class Alumno {
  - id: Long
  - nombre: String
  - apellidos: String
  - DNI: String
  - curso: Integer
}

class ExamenAlumno {
  - id: Long
  - claveCorreccion: String (SHA-256)
  - notaFinal: Double
  - estado: EstadoExamen
}

class ExamenAlumnoMarca {
  - id: Long
  - indiceMarcado: Integer
}

class Respuesta {
  - id: Long
  - contenido: String
  - esCorrecta: Boolean
  - indice: Integer
}

enum EvaluaciónExamen {
  PARCIAL_1
  PARCIAL_2
  PARCIAL_3
  FINAL
  EXTRAORDINARIO
}

enum DificultadPregunta {
  FACIL
  MEDIO
  DIFICIL
}

class Tema {
  - id: Long
  - nombre: String
}

' Relaciones Actualizadas
Respuesta "*" -u-o "1" Pregunta : contiene
Pregunta ..> DificultadPregunta
Examen "1" -o "*" Pregunta : se compone de
Examen "*" -- "1" Asignatura : pertenece a
Profesor "1" -- "*" Asignatura : imparte

' N:M Transversalidad
Asignatura "*" -- "*" Grado : se imparte en

' N:M Matriculación
Alumno "*" -- "*" Asignatura : matriculado en (Matrículas)
Alumno "*" -- "1" Grado : pertenece a

' Relación Modelo vs Ejemplar (Core IDSW2)
Examen "1" -- "*" ExamenAlumno : genera ejemplares
Alumno "1" -- "*" ExamenAlumno : realiza

' Auditoría Detallada
ExamenAlumno "1" *-- "*" ExamenAlumnoMarca : registra
ExamenAlumnoMarca "*" -- "1" Pregunta : de la pregunta
ExamenAlumnoMarca "*" -- "1" Respuesta : respuesta elegida

Pregunta "*" -- "1" Tema : pertenece a
Tema "*" -- "1" Asignatura : de la asignatura

@enduml
